// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

"
`;

exports[`html-tag 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;

exports[`just-text 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

Something
"
`;

exports[`with-one-image 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;

exports[`with-one-image-without-header 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;

exports[`with-two-images 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;

exports[`with-two-images-without-header 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;

exports[`without-all 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;

exports[`without-images 1`] = `
"# Preview Updater

<picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://banners.beyondco.de/Preview%20Updater.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository">
    <img src="https://banners.beyondco.de/Preview%20Updater.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=code&packageManager=npm+install&packageName=TheDragonCode%2Fgithub-preview-updater&description=Lightweight+preview+update+in+your+repository" alt="Preview Updater">
</picture>

## Usage

Something
"
`;
